--- a/src/main/webapp/WEB-INF/pages/user_history.html
+++ b/src/main/webapp/WEB-INF/pages/user_history.html
@@ -53,7 +53,6 @@
                 <div class="pull-right" ng-if="username != 'Гость' && username != 'admin'">
                     <ul class="nav">
                         <li><a href="/logout">Выход</a></li>
-                        <li><a href="http://localhost:8080/shop/basket">Корзина</a></li>
                         <li><a href="#">Вы вошли как {{username}}</a></li>
                     </ul>
                 </div>
@@ -97,7 +96,7 @@
                 <div ng-if="baskets!=''">
                     <h2>История заказов:</h2>
                     <div ng-repeat="basket in baskets">
-                        <div ng-if="basket.status=='1'">
+                        <div ng-if="basket.userConfirmStatus=='1'">
                             <h4>Заказ номер {{basket.id}}</h4>
                             <table class="table">
                                 <thead>
@@ -105,20 +104,23 @@
                                     <th>Название</th>
                                     <th>Цена</th>
                                     <th>Тип товара</th>
+                                    <th>Количество</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr ng-repeat="productInOrder in basket.productInOrder">
-                                    <td>{{productInOrder.product.name}}</td>
-                                    <td>{{productInOrder.product.price}}</td>
-                                    <td>{{productInOrder.product.type.name}}</td>
+                                <tr ng-repeat="basketProductLink in basket.basketProductLinks"
+                                    ng-if="basketProductLink.quantity!=0">
+                                    <td>{{basketProductLink.product.name}}</td>
+                                    <td>{{basketProductLink.product.price}}</td>
+                                    <td>{{basketProductLink.product.type.name}}</td>
+                                    <td>{{basketProductLink.quantity}}</td>
                                 </tr>
                                 </tbody>
                             </table>
                             <h4>Общая стоимость: {{basket.cost}}</h4>
-                            <div ng-if="basket.status2=='0'"><h4><font color="blue"> В обработке</font></h4></div>
-                            <div ng-if="basket.status2=='1'"><h4><font color="red">Отменён</font></h4></div>
-                            <div ng-if="basket.status2=='2'"><h4><font color="green">Подтверждён</font></h4></div>
+                            <div ng-if="basket.adminConfirmStatus=='0'"><h4><font color="blue"> В обработке</font></h4></div>
+                            <div ng-if="basket.adminConfirmStatus=='1'"><h4><font color="red">Отменён</font></h4></div>
+                            <div ng-if="basket.adminConfirmStatus=='2'"><h4><font color="green">Подтверждён</font></h4></div>
                             <br>
                         </div>
                     </div>
