--- a/src/main/webapp/WEB-INF/pages/user_product.html
+++ b/src/main/webapp/WEB-INF/pages/user_product.html
@@ -141,32 +141,20 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>
-                            <button class="btn btn-light btn-large" ng-click="sortBy('name')">Название</button>
-                            <span ng-show="propertyName === 'name'" ng-class="{reverse: reverse}"></span>
-                        </th>
-                        <th>
-                            <button class="btn btn-light btn-large" ng-click="sortBy('price')">Цена</button>
-                            <span ng-show="propertyName === 'price'" ng-class="{reverse: reverse}"></span>
-                        </th>
-                        <th>
-                            <button class="btn btn-light btn-large" ng-click="sortBy('quantity')">Количество</button>
-                            <span ng-show="propertyName === 'quantity'" ng-class="{reverse: reverse}"></span>
-                        </th>
-                        <th>
-                            <button class="btn btn-light btn-large" ng-click="sortBy('type.name')">Тип товара</button>
-                            <span ng-show="propertyName === 'type.name'" ng-class="{reverse: reverse}"></span>
-                        </th>
+                        <th>Название</th>
+                        <th>Цена</th>
+                        <th>Количество</th>
+                        <th>Тип товара</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="product in products | orderBy:propertyName:reverse">
+                    <tr ng-repeat="product in products | orderBy: 'id'" ng-if="getQuantity(product.productStockLinks) != 0">
                         <td>{{product.name}}</td>
                         <td>{{product.price}}</td>
-                        <td>{{product.quantity}}</td>
+                        <td>{{getQuantity(product.productStockLinks)}}</td>
                         <td>{{product.type.name}}</td>
                         <td>
-                            <div ng-if="product.quantity!='0' && username != 'Гость' && username != 'admin' "
+                            <div ng-if="username != 'Гость' && username != 'admin' "
                                  ng-controller="postController">
                                 <form name="post" ng-submit="addProduct()">
                                     <button type="submit" ng-click="setId(product.id)"
@@ -176,7 +164,7 @@
                                 <pop-up-msg></pop-up-msg>
                             </div>
 
-                            <div ng-if="product.quantity!='0' && (username=='Гость' || username=='admin')"
+                            <div ng-if="username=='Гость' || username=='admin'"
                                  ng-controller="postController">
                                 <form name="post" ng-submit="openPopUp('Необходимо авторизоваться')">
                                     <button type="submit" class="btn btn-small btn-warning">В корзину</button>
